<?xml version="1.0" encoding="utf-8"?>

<!--  Copyright (C) 2014,Newton Bujiku 
This program is free software: you can redistribute it and/or modify it under the 
terms of the GNU General Public License as published by the Free Software Foundation, 
either version 3 of the License, or (at your option) any later version.
This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; 
without even the implied warranty of MERCHANTABIL- ITY or FITNESS FOR A PARTICULAR PURPOSE. 
See the GNU General Public License for more details.
You should have received a copy of the GNU General Public License along with this program. 
If not, see http://www.gnu.org/licenses/. -->


<resources>

    <string name="app_name">iOS Cal</string>
    <string name="action_settings">Settings</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="point">·</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">÷</string>
    <string name="multiply">*</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ac">C</string>
    <string name="positive_negative">±</string>
    <string name="percentage">%</string>
    <string name="ios">iOS Cal</string>
    <string name="version">iOS Cal (Alpha Release)</string>
    <string name="name">Gotti Bujiku®</string>

</resources>
